--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pandas>=2.3.3",
     "playwright>=1.57.0",
     "scrapy>=2.13.4",
     "scrapy-playwright>=0.0.44",
